--- a/dashboard/src/main/resources/dashboard-client/app/index.html
+++ b/dashboard/src/main/resources/dashboard-client/app/index.html
@@ -24,7 +24,7 @@
         <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <!-- smart resize -->
         <!--script src="bower_components/js/jquery.smartresize.min.js"></script-->
-        
+
     <!-- angularjs -->
         <script src="bower_components/angular/angular.min.js"></script>
         <script src="bower_components/angular-animate/angular-animate.min.js"></script>
@@ -183,6 +183,21 @@
 
             .progress-bar-white {
               background-color: #fff;
+            }
+
+            form .etymology {
+              position: relative;
+            }
+
+            form .etymology .remove {
+              display: none;
+              position: absolute;
+              right: 0;
+              top: 10px;
+            }
+
+            form .etymology:hover .remove {
+              display: block;
             }
 
 
