removed Google Font not served

--- a/dashboard/src/main/resources/dashboard-client/app/index.html
+++ b/dashboard/src/main/resources/dashboard-client/app/index.html
@@ -16,7 +16,7 @@
         <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen">
 
 	<!-- google webfonts -->
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans&subset=latin,latin-ext|Source+Code+Pro' rel='stylesheet' media="screen">
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans&subset=latin,latin-ext' rel='stylesheet' media="screen">
 
     <!-- moment.js (date library) -->
         <!--script src="bower_components/js/moment-with-langs.min.js"></script-->
