extended with more functionality

--- a/dashboard/src/main/resources/dashboard-client/app/index.html
+++ b/dashboard/src/main/resources/dashboard-client/app/index.html
@@ -80,6 +80,8 @@
         <script src="bower_components/textAngular/dist/textAngular-sanitize.min.js"></script>
         <script src="bower_components/textAngular/dist/textAngular.min.js"></script>
 
+        <script src="bower_components/angular-md5/angular-md5.js"></script>
+
         <script src="scripts/libs/utilities.js"></script>
 
     <!-- dashboardappApp -->
