--- a/dashboard/src/main/resources/dashboard-client/app/tmpls/names/suggested.html
+++ b/dashboard/src/main/resources/dashboard-client/app/tmpls/names/suggested.html
@@ -13,7 +13,7 @@
             </thead>
             <tbody>
                 <tr ng-repeat="entry in namesList">
-                    <td><input type="checkbox" value="{{entry.name}}" name="selected_name"> <a href="#">{{entry.name}}</a></td>
+                    <td><input type="checkbox" value="{{entry.name}}" name="selected_name"> <a>{{entry.name}}</a></td>
                     <td>{{entry.details}}</td>
                     <td>{{entry.geoLocation.place}}</td>
                     <td>{{entry.submittedBy}}</td>
