--- a/dashboard/src/main/resources/dashboard-client/app/tmpls/names/lists.html
+++ b/dashboard/src/main/resources/dashboard-client/app/tmpls/names/lists.html
@@ -25,13 +25,13 @@
                     <th>Gender</th>
                     <th data-hide="phone,tablet">Syllables</th>
                     <th data-hide="phone,tablet">Morphology</th>
-                    <th data-hide="phone">Status</th>
+                    <th ng-show="isAdmin || isLexicographer" data-hide="phone">Status</th>
                     <th data-hide="phone,tablet" data-name="Date Of Submission">Submitted</th>
                 </tr>
             </thead>
             <tbody>
                 <tr ng-repeat="entry in namesList">
-                    <td><input type="checkbox" value="{{entry.name}}" name="selected_name"> <a href="#">{{entry.name}}</a></td>
+                    <td><input type="checkbox" value="{{entry.name}}" name="selected_name"> <a ui-sref="auth.names.edit_entries({entry:entry.name})">{{entry.name}}</a></td>
                     <td>{{entry.gender}}</td>
                     <td>{{entry.syllables}}</td>
                     <td>{{entry.morphology}}</td>
