--- a/dashboard/src/main/resources/dashboard-client/app/tmpls/names/new.html
+++ b/dashboard/src/main/resources/dashboard-client/app/tmpls/names/new.html
@@ -7,7 +7,6 @@
               <span ng-show="!uploader.queue.length">Drag and drop a properly formated CSV or XSLX file here to add multiple entries at a time.<br><br>
                 <b>Note:</b> Download our XSLX template for how to format your entries. <br><a class="btn btn-sm btn-default" href="">Download Template (.xslx)</a>
                 </span>
-
                 <div ng-repeat="item in uploader.queue">
                   <p>Uploading: <strong>{{ item.file.name }}</strong>
                     ({{ item.file.size/1024/1024|number:2 }} MB)</p>
@@ -16,7 +15,6 @@
                     <div class="progress-bar bg-info" role="progressbar" ng-style="{ 'width': item.progress + '%' }"></div>
                   </div>
                 </div>
-
           </div>
       </div>
    </div>
@@ -28,135 +26,4 @@
     </div>
 </div>
 
-
-
-<form class="name-entry-form" name="form">
-
-<div class="row">
-    <div class="col-lg-6 col-sm-7 col-sm-8 col-xs-12">
-
-        <div class="form-group">
-            <label for="name" class="required">Name</label>
-            <input type="text" id="name" class="form-control" ng-model="name.name" required>
-        </div>
-        <div class="form-group">
-            <label for="meaning" class="required">Meaning</label>
-            <textarea id="meaning" cols="10" rows="3" class="form-control" ng-model="name.meaning" required></textarea>
-        </div>
-        <div class="form-group">
-            <label for="extra_info">Extra information about this name</label>
-            <textarea id="extra_info" cols="10" rows="3" class="form-control" ng-model="name.extendedMeaning"></textarea>
-        </div>
-        <div class="form-group">
-            <label for="syllables" class="required">Syllable breakdown</label>
-            <input type="text" id="syllables" class="form-control" ng-model="name.syllables" required>
-        </div>
-        <div class="form-group">
-            <label for="ipa">IPA Notation</label>
-            <input type="text" id="ipa" class="form-control" ng-model="name.ipaNotation">
-        </div>
-        <div class="form-group">
-            <label for="pronounciation">Pronunciation</label>
-            <input type="text" id="pronounciation" class="form-control" ng-model="name.pronunciation">
-        </div>
-        <div class="form-group">
-            <label for="morphology">Morphology</label>
-            <input type="text" id="morphology" class="form-control" ng-model="name.morphology">
-        </div>
-
-        <div class="form-group">
-            <h5>Etymology</h5>
-            <div class="row etymology">
-                <div class="col-sm-4">
-                    <label>Part</label>
-                    <input type="text" class="form-control" name="part">
-                </div>
-                <div class="col-sm-8">
-                    <label>Meaning</label>
-                    <input type="text" class="form-control" name="meaning">
-                </div>
-            </div>
-            <p class="text-right help-block"><a ng-click="clone_etymology()">Add a new part and meaning pair</a></p>
-        </div>
-
-        <div class="form-group">
-            <label for="name_variants">Variants</label>
-            <span class="help-block">Enter other known variations for this name. Use comma to separate the different variations.</span>
-            <textarea id="name_variants" class="form-control" ng-model="name.variants"></textarea>
-            <!--div class="row">
-                <div class="col-sm-12"><label>Variants</label></div>
-                <div class="col-sm-6">
-                    <label for="variant_word">Word</label>
-                    <input type="text" id="variant_word" class="form-control" ng-model="etymology.meaning">
-                </div>
-                <div class="col-sm-6">
-                    <label for="variant_geography">Note (e.g. Geography)</label>
-                    <input type="text" id="variant_geography" class="form-control" ng-model="etymology.meaning">
-                </div>
-            </div>
-            <p class="text-right"><a ng-click="clone_variant()">Add a new variant</a></p-->
-        </div>
-
-        <div class="form-group">
-            <label for="media">Media Link</label>
-            <span class="help-block">Enter links to resources that can be found online for this name. Use comma to separate links.</span>
-            <textarea id="media" class="form-control" ng-model="name.media"></textarea>
-            <!--div class="row">
-                <div class="col-sm-12"><label>Media Links</label></div>
-                <div class="col-sm-6">
-                    <label for="media_title">Title</label>
-                    <input type="text" id="media_title" class="form-control" ng-model="media.title">
-                </div>
-                <div class="col-sm-6">
-                    <label for="media_link">Link</label>
-                    <input type="text" id="media_link" class="form-control" ng-model="media.link">
-                </div>
-            </div>
-            <p class="text-right"><a ng-click="clone_link()">Add a new link</a></p-->
-        </div>
-
-        <div class="form-group">
-            <label for="person_name">Famous People</label>
-            <span class="help-block">Enter names of famous people bearing this name. Use comma to separate names.</span>
-            <textarea id="person_name" class="form-control" ng-model="name.famousPeople"></textarea>
-            <!--div class="row">
-                <div class="col-sm-12"><label>Personalities</label></div>
-                <div class="col-sm-6">
-                    <label for="person_name">Name</label>
-                    <input type="text" id="person_name" class="form-control" ng-model="name.famousPeople">
-                </div>
-                <div class="col-sm-6">
-                    <label for="person_profession">Profession</label>
-                    <input type="text" id="person_profession" class="form-control" ng-model="persons.profession">
-                </div>
-                <div class="col-sm-8">
-                    <label for="person_picture" class="optional">Picture</label>
-                    <input type="text" id="person_picture" class="form-control" ng-model="persons.picture">
-                </div>
-            </div>
-            <p class="text-right"><a ng-click="clone_person()">Add a new personality</a></p-->
-        </div>
-
-
-        <div class="form-group">
-            <label for="geolocation" class="required">Geolocation</label>
-            <span class="help-block">Where is this name most commonly used?</span>
-            <select id="geolocation" class="form-control" placeholder="Select geolocation..." ng-model="name.geoLocation" required>
-                <option ng-repeat="location in geoLocations" value="{{location}}">{{location.place}}</option>
-            </select>
-        </div>
-
-    </div>
-    
-</div>
-
-<div class="row">
-    <div class="col-sm-12">
-        <hr>
-        <button type="submit" class="btn btn-lg btn-success" ng-click="submit()" ng-disabled="form.$invalid || !form.$dirty">Submit for Review</button>
-        <!--button type="submit" class="btn btn-lg btn-info" ng-click="save()" ng-disabled="form.$invalid || !form.$dirty">Save for Later</button>
-        <button type="submit" class="btn btn-lg btn-default" ng-click="preview()" ng-disabled="form.$invalid || !form.$dirty">Preview Entry</button-->
-    </div>
-</div>
-
-</form>
+<ng-include src="'tmpls/names/partials/_form.html'"></ng-include>
