fixed error; changed Dashboard language to general for all users

--- a/dashboard/src/main/resources/dashboard-client/app/tmpls/dashboard.html
+++ b/dashboard/src/main/resources/dashboard-client/app/tmpls/dashboard.html
@@ -12,7 +12,7 @@
 
 <div class="row row_full">
     <div class="col-sm-12">
-       <h5>Your Stats</h5>
+       <h5>Site Statistics</h5>
     </div>
      <div class="col-sm-3 col-xs-4">
         <div class="info_box_var_1 box_bg_b">
