--- a/dashboard/src/main/resources/dashboard-client/app/index.html
+++ b/dashboard/src/main/resources/dashboard-client/app/index.html
@@ -10,6 +10,8 @@
 
   <!-- build:css(.) styles/vendor.css -->
   <!-- bower:css -->
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css" media="screen">
   <link rel='stylesheet' href='bower_components/ng-tags-input/ng-tags-input.min.css' />
   <link rel='stylesheet' href='bower_components/angular-ui-notification/dist/angular-ui-notification.min.css' />
   <link rel='stylesheet' href='bower_components/textAngular/dist/textAngular.css' />
