--- a/dashboard/src/main/resources/dashboard-client/app/tmpls/users/lists.html
+++ b/dashboard/src/main/resources/dashboard-client/app/tmpls/users/lists.html
@@ -35,7 +35,7 @@
                     <td>{{user.username}}</td>
                     <td><a ui-sref="auth.users.edit_user({ id: user.id })">{{user.email}}</a></td>
                     <td>{{user.roles}}</td>
-                    <td>{{user.createdAt|date}}</td>
+                    <td>{{user.createdAt|date:'mediumDate'}}</td>
                 </tr>
             </tbody>
             <tfoot class="hide-if-no-paging">
